# data-engineering-course-sample

./: .gitignore  Dockerfile  README.md  docker-compose.yml  spark_defaults.conf  startup.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-test.yml
datagen/: .gitignore  README.qmd  load.sql  pyproject.toml
datagen/data_quality_check/: data_validation_check.sql
datagen/datagen/: cli.py  config.py
datagen/datagen/core/: distributions.py  generator.py  schema.py
datagen/datagen/sinks/: base.py  filesystem.py  postgres.py
ipython_scripts/startup/: 01-sql-magics.ipy
notebooks/: sample_chapter_idempotency.ipynb  sample_chapter_idempotency_w_solutions.ipynb
